# PDS-unipi-project

./: CMakeLists.txt  LICENSE  README.md  pyproject.toml  remote.sh  run_comprehensive_evaluation.sh  run_dt.sh  run_ff.sh
analysis/: plot_comprehensive_results.py  plot_mpi_results.py
include/: marray.h
include/sequential/: dt.h
report/: report.aux  report.fdb_latexmk  report.fls  report.tex  report.toc
report/sections/: Introduction.tex  Validation.tex
results/fastflow_impl/: performance.csv
results/fastflow_impl1/: comprehensive_performance.csv  performance.csv
results/fastflow_impl1Final/: performance.csv
results/fastflow_impl2/: comprehensive_performance.csv  performance.csv
results/fastflow_impl2Final/: performance.csv
results/fastflow_impl3/: performance.csv
results/mpi/: performance_mpi.csv  performance_mpi_pred_with_master.csv  performance_nodes_4.csv  train_performance_mpi.csv
results/openmp/: performance.csv
results/sequential/: performance.csv
results/sequential_impl/: performance.csv
results/validation/ff_sklearn/: path.txt
results/validation/ff_sklearn/ff_exp1/: ff_predictions_100_trees_20000_200000_samples.csv  ff_predictions_150_trees_20000_200000_samples.csv  ff_predictions_200_trees_20000_200000_samples.csv  ff_predictions_36_trees_20000_200000_samples.csv  ff_predictions_50_trees_20000_200000_samples.csv  ff_probabilities_100_trees_20000_200000_samples.csv  ff_probabilities_150_trees_20000_200000_samples.csv  ff_probabilities_200_trees_20000_200000_samples.csv  ff_probabilities_36_trees_20000_200000_samples.csv  ff_probabilities_50_trees_20000_200000_samples.csv  sklearn_predictions_100_trees_20000_200000_samples.csv  sklearn_predictions_150_trees_20000_200000_samples.csv  sklearn_predictions_200_trees_20000_200000_samples.csv  sklearn_predictions_50_trees_20000_200000_samples.csv  sklearn_probabilities_100_trees_20000_200000_samples.csv  sklearn_probabilities_150_trees_20000_200000_samples.csv  sklearn_probabilities_200_trees_20000_200000_samples.csv  sklearn_probabilities_36_trees_20000_200000_samples.csv  sklearn_probabilities_50_trees_20000_200000_samples.csv
results/validation/ff_sklearn/ff_exp2/: ff_predictions_100_trees_20000_200000_samples.csv  ff_predictions_150_trees_20000_200000_samples.csv  ff_predictions_200_trees_20000_200000_samples.csv  ff_predictions_36_trees_20000_200000_samples.csv  ff_predictions_50_trees_20000_200000_samples.csv  ff_probabilities_100_trees_20000_200000_samples.csv  ff_probabilities_150_trees_20000_200000_samples.csv  ff_probabilities_200_trees_20000_200000_samples.csv  ff_probabilities_36_trees_20000_200000_samples.csv  ff_probabilities_50_trees_20000_200000_samples.csv  sklearn_predictions_36_trees_20000_200000_samples.csv
results/validation/seq_sklearn/: cpp_predictions.txt  cpp_probabilities.csv  sklearn_predictions.csv  sklearn_probabilities.csv
src/: general.conf  general_config.h  general_config.h.in
src/fastflow/: CMakeLists.txt  default.conf  dt_fastflow.h  dt_ff_exp1.h  dt_ff_exp2.h  ff.conf  ff_impl_config.h  ff_impl_config.h.in  main.cpp  main_exp1.cpp  main_exp2.cpp
src/mpi/: CMakeLists.txt  dt_mpi.h  main.cpp  mpi.conf  mpi_impl_config.h  mpi_impl_config.h.in
src/openmp/: CMakeLists.txt  dt_omp.h  main.cpp  omp.conf  omp_impl_config.h  omp_impl_config.h.in
src/sequential/: CMakeLists.txt  main.cpp  seq_impl_config.h  seq_impl_config.h.in
src/tests/: CMakeLists.txt
src/tests/utils/: test_utils.cpp
src/utils/: analyze_performance.py  preprocess_susy.py  utils.cpp  utils.h
src/validation/ff_sklearn/: CMakeLists.txt  main.cpp  validate.py
src/validation/seq_sklearn/: CMakeLists.txt  preprocess.py  sq_random_forest.cpp  utils.py  validate.py
