[project]
name = "pds"
version = "0.1.0"
description = "SPM course's project"
authors = [
    {name = "Oleksiy Nedobiychuk",email = "oleksiy12345@live.it"}
]
license = {text = "Open"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.3,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
